--- a/Card 01/Cards.html
+++ b/Card 01/Cards.html
@@ -23,19 +23,18 @@
                     <article>
                         <figure>
                             <img
-                                src="https://img.freepik.com/free-photo/panoramic-view-field-covered-grass-trees-sunlight-cloudy-sky_181624-9801.jpg?t=st=1697296749~exp=1697297349~hmac=f46f2ad278de1fb8b9b11ea1dd16d03c3431cb770df8f47df8eb1e39d494365a"
+                                src="https://as2.ftcdn.net/v2/jpg/05/69/51/73/1000_F_569517340_uDInMrHC8opflDYuo2AE0fVvsxzoyuZJ.jpg"
                                 alt="Preview"
                             >
                         </figure>
                         <div class="article-preview">
                             <h2>Blog 1</h2>
                             <p>
-                                Trees are an essential resource for everyone. 
-                                They provide habitat for various species, clean the air and produce oxygen. 
-                                Besides, they give us shade in the summer, and their leaves can be used for 
-                                numerous purposes, such as making perfumes, medicines, etc. 
-                                Moreover, they help cool our atmosphere.
-                                <a href="#" class="read-more" title="Read More">
+                                The solar system consists of the sun, the eight planets and the satellites. 
+                                Other than these, there are asteroids, comets, dust, minor planets, and gas. 
+                                The Sun, Mercury, Venus, Earth and Mars constitute the inner solar system, 
+                                and the asteroid belt lies between the orbit of Mars and Jupiter. 3D Solar System. 
+                                <a href="#" class="read-more">
                                     Read more
                                 </a>
                             </p>
@@ -54,7 +53,7 @@
                                 Mountains define landscapes, people risk their lives to climb them, and they can even make their own weather. 
                                 The mighty chunks rise all over the world, including the oceans. 
                                 They usually have steep, sloping sides and sharp or rounded ridges, and a high point, 
-                                called a peak or summit. 
+                                called a peak or summit. A mountain can be defined as a broad form of land.
                                 <a href="#" class="read-more" title="Read More">
                                     Read more
                                 </a>
@@ -83,26 +82,7 @@
                             </p>
                         </div>
                     </article>
-                    <article>
-                        <figure>
-                            <img
-                                src="https://as2.ftcdn.net/v2/jpg/05/69/51/73/1000_F_569517340_uDInMrHC8opflDYuo2AE0fVvsxzoyuZJ.jpg"
-                                alt="Preview"
-                            >
-                        </figure>
-                        <div class="article-preview">
-                            <h2>Blog 4</h2>
-                            <p>
-                                The solar system consists of the sun, the eight planets and the satellites. 
-                                Other than these, there are asteroids, comets, dust, minor planets, and gas. 
-                                The Sun, Mercury, Venus, Earth and Mars constitute the inner solar system, 
-                                and the asteroid belt lies between the orbit of Mars and Jupiter. 3D Solar System. 
-                                <a href="#" class="read-more">
-                                    Read more
-                                </a>
-                            </p>
-                        </div>
-                    </article>
+                   
                 </div>
             </div>
         </div>
