--- a/Button 01/index.html
+++ b/Button 01/index.html
@@ -16,20 +16,19 @@
     </head>
     <body>
         <span class="background">
-            <a
-                href="#"
-                class='button'
+            <a 
+              href="#"
+              class='button'
             >
-                <svg>
-                    <rect
-                        x="0" y="0" 
-                        fill="none"
-                        width="100%"
-                        height="100%"
-                    />
-                </svg>
-                Submit
-            </a>            
-        </span>
+        <svg>
+            <rect 
+              x="0" y="0"
+              fill="none"
+              width="100%"
+              height="100%"
+             /> 
+        </svg>
+         Submit
+        </a></span>
     </body>
 </html>
